--- a/client/index.html
+++ b/client/index.html
@@ -11,7 +11,7 @@
       referrerpolicy="no-referrer"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mila</title>
+    <title>Atrch</title>
   </head>
   <body>
     <div id="root" class="body"></div>
